--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
+  "name": "infinite-scroll",
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "docs": "jsdoc -c jsdoc.json"
+    "docs": "jsdoc -c jsdoc.json --pedantic",
+    "lint": "eslint src/**/*.js src/**/*.vue"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/eslint-parser": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.14.0",
+    "eslint-define-config": "^2.1.0",
     "eslint-plugin-vue": "^9.31.0",
     "html-webpack-plugin": "^5.6.3",
     "jsdoc": "^4.0.4",
     "jsdoc-vuejs": "^4.0.0",
     "style-loader": "^4.0.0",
+    "vue-eslint-parser": "^9.4.3",
     "vue-loader": "^17.3.1",
     "vue-template-compiler": "^2.7.16",
     "webpack": "^5.96.1",
@@ -23,6 +30,7 @@
   },
   "dependencies": {
     "@vue/compiler-sfc": "^3.5.12",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue-template-compiler": "^2.7.16"
   }
 }
